Base64 Encoding/Decoding Modernization (#9)
* Replace custom Base64 with JDK java.util.Base64; keep signatures, use Encoder without line breaks and MIME Decoder; return null on invalid input. Branch: crramirez/fix/base64

* Refactor StringUtils: remove legacy Base64 implementation, migrate to JDK Base64 library, and perform general code cleanup for readability and efficiency.

* Update .gitignore: add `/out/` and remove redundant `/code/build/` entry

* Clean up

* Remove `.idea/misc.xml` to clean up project-specific IntelliJ settings

* Update .gitignore: add `/misc.xml` to ignore IntelliJ project-specific settings

* Update build.xml: bump `java-version` property from 9 to 21

* Update code/src/casciian/bits/StringUtils.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Update code/src/casciian/bits/StringUtils.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Fix JavaDoc for toBase64() method - incorrect return type documentation (#10)

* Initial plan

* Fix JavaDoc for toBase64() to reflect String return type

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

* Update Base64 encoding to RFC 4648 compliance by switching from MIME to Basic encoder, removing line breaks and whitespace.

---------

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>
Co-authored-by: Copilot <198982749+Copilot@users.noreply.github.com>
Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>